--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,20 @@
 {
-    "name": "icarohs7/ecommerce",
-    "authors": [
-        {
-            "name": "Icaro D Temponi",
-            "email": "icarohs7@gmail.com"
-        }
-    ],
-    "require": {
-    	"phpmailer/phpmailer":"5.2.22",
-    	"slim/slim":"2.0",
-    	"rain/raintpl":"3.0.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "": "vendor\\hcodebr\\php-classes\\src"
-        }
-    }
+	"name": "icarohs7/ecommerce",
+	"authors": [
+		{
+			"name": "Icaro D Temponi",
+			"email": "icarohs7@gmail.com"
+		}
+	],
+	"require": {
+		"phpmailer/phpmailer": "5.2.22",
+		"slim/slim": "2.0",
+		"rain/raintpl": "3.0.0"
+	},
+	"autoload": {
+		"psr-4": {
+			"Hcode\\": "vendor\\hcodebr\\php-classes\\src"
+		}
+	},
+	"description": ""
 }
